--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "db-create": "node scripts/create-db.js",
+    "db-drop": "node scripts/drop-db.js",
+    "db-reset": "npm run db-drop && npm run db-create"
   },
   "dependencies": {
     "@primer/css": "17.0.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.3.4",
+    "pg": "^8.11.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2"
@@ -23,7 +28,9 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
+    "@types/pg": "^8.10.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/supertest": "^6.0.3",
