--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "test": "jest",
     "db-create": "node scripts/create-db.js",
     "db-drop": "node scripts/drop-db.js",
-    "db-reset": "npm run db-drop && npm run db-create"
+    "db-reset": "npm run db-drop && npm run db-create",
+    "dev-with-metrics": "npm run dev"
   },
   "dependencies": {
     "@primer/css": "17.0.1",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.4",
     "pg": "^8.11.3",
+    "prom-client": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2"
