--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@primer/css": "17.0.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "next": "15.3.4",
     "pg": "^8.11.3",
     "prom-client": "^15.1.3",
