--- a/package.json
+++ b/package.json
@@ -8,18 +8,26 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
+    "test:api-stability": "jest --testPathPatterns=api-stability.test.ts --verbose",
+    "test:api-stability:run": "node scripts/run-api-stability-test.js",
+    "test:e2e": "playwright test e2e/",
+    "test:e2e:users": "playwright test e2e/users-stability.spec.ts",
     "db-create": "node scripts/create-db.js",
+    "db-create-render": "node scripts/create-db-render.js",
     "db-drop": "node scripts/drop-db.js",
     "db-reset": "npm run db-drop && npm run db-create",
     "dev-with-metrics": "npm run dev"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@primer/css": "17.0.1",
+    "axios": "^1.10.0",
     "dotenv": "^17.2.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "15.3.4",
     "pg": "^8.11.3",
+    "playwright": "^1.54.1",
     "prom-client": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -28,6 +36,7 @@
   "devDependencies": {
     "@edge-runtime/jest-environment": "^4.0.0",
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.54.1",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
