playwright config to add more test

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:api-stability": "jest --testPathPatterns=api-stability.test.ts --verbose",
+    "test:api-stability": "jest --testPathPatterns=api-stability-direct.test.ts --verbose",
     "test:api-stability:run": "node scripts/run-api-stability-test.js",
     "test:e2e": "playwright test e2e/",
-    "test:e2e:users": "playwright test e2e/users-stability.spec.ts",
+    "test:e2e:performance": "playwright test e2e/users-stability-performance.spec.ts",
     "db-create": "node scripts/create-db.js",
     "db-create-render": "node scripts/create-db-render.js",
     "db-drop": "node scripts/drop-db.js",
