todos feature and ETL automation cleaning database

--- a/package.json
+++ b/package.json
@@ -19,7 +19,15 @@
     "dev-with-metrics": "npm run dev",
     "generate-react-data": "node scripts/generate-consistent-react-data.js",
     "generate-db-metrics": "node scripts/generate-database-metrics.js",
-    "generate-api-metrics": "node scripts/generate-api-metrics.js"
+    "generate-api-metrics": "node scripts/generate-api-metrics.js",
+    "db-create-indexes": "node scripts/run-indexes.js",
+    "db-clean-users": "node scripts/clean-users.js",
+    "db-cleanup": "node scripts/database-cleanup-pipeline.js",
+    "db-etl": "node scripts/etl-pipeline.js",
+    "setup-hooks": "bash scripts/setup-git-hooks.sh",
+    "db-analyze": "node scripts/database-cleanup-pipeline.js analyze",
+    "db-backup": "node scripts/database-cleanup-pipeline.js backup",
+    "db-optimize": "node scripts/database-cleanup-pipeline.js optimize"
   },
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
