--- a/[INDIVIDU 03] - [FCM Push Notification]/server/package.json
+++ b/[INDIVIDU 03] - [FCM Push Notification]/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage --runInBand --detectOpenHandles --forceExit",
+    "test:coverage": "jest --coverage --runInBand --detectOpenHandles --forceExit --coverageThreshold=\"{\\\"global\\\":{\\\"branches\\\":90,\\\"functions\\\":90,\\\"lines\\\":90,\\\"statements\\\":90}}\""
   },
   "keywords": [
     "fcm",
@@ -26,9 +27,27 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "jest": "^29.0.0",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=20.0.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coverageDirectory": "coverage",
+    "collectCoverageFrom": [
+      "app.js",
+      "fcmservice.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
+      }
+    }
   }
 }
