--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,9 @@ jspm_packages/
 
 # Yarn Integrity file
 .yarn-integrity
+
+# Additional Firebase sensitive files
+**/firebase-config.js
+**/firebase-messaging-sw.js
+# Firebase Admin SDK keys
+**/service-account-key.json
