--- a/[INDIVIDU 13] - [AI Powered SWOT Analyzer]/sonar-project.properties
+++ b/[INDIVIDU 13] - [AI Powered SWOT Analyzer]/sonar-project.properties
@@ -1,6 +1,6 @@
 # SonarCloud configuration for AI SWOT Analyzer
-sonar.projectKey=ai-swot-analyzer
-sonar.organization=your-organization
+sonar.projectKey=ekosbp_ai-swot-analyzer
+sonar.organization=ekosbp
 
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=AI Powered SWOT Analyzer
